<resources>
    <string name="app_name">CzajSearch</string>
    <string name="splash_screen_author">Designed by Czajkowski</string>
    <string name="filter_text_city">Wybierz miasto</string>
    <string name="filet_city_input">Wybierz miasto z listy</string>
    <string name="filter_city_input_hint">Wybierz miasto z listy</string>
    <string name="filter_text_shop">Wybierz sklep</string>
    <string name="filter_shop_input_hint">Wybierz sklep</string>
    <string name="filter_button">Szukaj</string>
    <string name="bottom_menu_home">Mapa</string>
    <string name="bottom_menu_list">Lista Artykułów</string>
    <string name="bottom_menu_search">Ulubione</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_textView">Klucz 13"</string>
    <string name="itemAvailability_input">1200</string>
    <string name="itemPrice_input">120 zł</string>
    <string name="search_view_list_item_queryHint">Wyszukaj artykuł ...</string>
    <string name="item_details_title_textView">Wiertarka udarowa BOSH</string>
    <string name="item_details_info_textView">Krótki szczegółowy opis wybranego artykułu</string>
    <string name="item_details_showOnMap_button">Pokaż na mapie</string>
    <string name="item_details_toList_button">Dodaj do ulubionych</string>
    <string name="item_details_removeList_button">Usuń z ulubionych</string>
    <string name="item_details_price_textView">Cena:</string>
    <string name="item_details_availability_textView">Dostępność:</string>
    <string name="item_details_price_input_textView">349,99 zł</string>
    <string name="item_details_availability_input_textView">100 sztuk</string>
    <string name="item_details_location_textView">Lokalizacja:</string>
    <string name="item_details_location_input_textView">Dział 5, Regał 12</string>
    <string name="bottom_view_share_now">Informacje o Produkcie</string>
    <string name="bottom_view_farba_biala_decoral">Farba biała Decoral</string>
    <string name="bottom_view_itemInfo_textView">Jest to biała farba uzywana do pomieszczeń, którą kochają wszyscy!</string>
    <string name="bottom_view_itemLocationTV">Dział: 13, Regał: 5</string>
    <string name="bottom_view_itemPriceTV">73.99 zł</string>
    <string name="bottom_view_itemAvailabilityTV">123 szt.</string>
    <string name="popup_map_connectBluetooth">Połącz się</string>
    <string name="alert_success_title">Sukces</string>
    <string name="alert_success_button">OK</string>
    <string name="alert_success_message">Urządzenie zostało poprawnie połączone z artykułem</string>
    <string name="alert_warning_title">Uwaga</string>
    <string name="alert_warning_buttonNO">Nie</string>
    <string name="alert_warning_buttonYes">Tak</string>
    <string name="alert_warning_message">Czy chcesz się połączyć z artykułem przez Bluetooth?</string>
    <string name="alert_error_title">Błąd!</string>
    <string name="alert_error_button">OK</string>
    <string name="alert_error_message">Urządzenie nie zostało poprawnie połączone z artykułem</string>
    <string name="loading_dialog_textView">Wczytywanie...</string>
    <string name="alert_success_favorite_title">Sukces</string>
    <string name="alert_success_favorite_button">OK</string>
    <string name="alert_success_favorite_message">Artykuł został dodany do ulubionych</string>
    <string name="alert_success_disconnected_title">Sukces</string>
    <string name="alert_success_disconnected_button">OK</string>
    <string name="alert_success_diconntected_message">Urządzenie zostało poprawnie odłączone od artykułu</string>
    <string name="item_layout_availability">Dostępność:</string>
    <string name="popup_item_found_textButton">Rozumiem</string>
</resources>