<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottom_item_details_container">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/bottom_view_share_now"
        android:textColor="@color/blue_czaj"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_czaj"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/bottom_view_itemImage"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/farba" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_view_itemTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_view_farba_biala_decoral"
                android:textColor="@color/blue_czaj"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_view_itemInfoTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_view_itemInfo_textView"
                android:textColor="@color/blackish"
                android:textSize="12dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/bottom_view_itemLocationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_view_itemLocationTV"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/bottom_view_itemPriceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_view_itemPriceTV"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/bottom_view_itemAvailabilityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bottom_view_itemAvailabilityTV"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/blue_czaj"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?android:attr/selectableItemBackground"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:gravity="center_vertical"-->
<!--        android:orientation="horizontal"-->
<!--        android:padding="12dp">-->
<!--    </LinearLayout>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/bottom_view_addToMapButton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_bottom_view"
        android:text="@string/item_details_showOnMap_button"
        android:textSize="15dp"/>


</LinearLayout>