<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:id="@+id/eachCardView"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/itemTitle_textView"
            android:layout_width="226dp"
            android:layout_height="23dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/item_textView"
            android:textAlignment="textEnd"
            android:textColor="@color/blue_czaj"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/itemImage_imageView"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/item_image" />

        <TextView
            android:id="@+id/itemPrice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="8dp"
            android:text="Cena:"
            app:layout_constraintStart_toEndOf="@+id/itemImage_imageView"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle_textView" />

        <TextView
            android:id="@+id/itemPrice_input"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="textEnd"
            android:text="@string/itemPrice_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle_textView" />

        <TextView
            android:id="@+id/itemAvailability_input"
            android:layout_width="49dp"
            android:layout_height="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="textEnd"
            android:text="@string/itemAvailability_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice_input" />

        <TextView
            android:id="@+id/itemAvailability_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="4dp"
            android:text="Dostepność:"
            app:layout_constraintStart_toEndOf="@+id/itemImage_imageView"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>